@@ -1,5 +1,9 @@
 # CHANGELOG
 # ---
+# * Improve TrustCommerce documentation [cody]
+#
+# * Add credit to Payflow [cody]
+#
 # * Add support for the Plug 'N Pay gateway [ryan.norbauer, cody]
 #
 # * Add support for ItemTotal, Shipping, Handling, and Tax amounts in the PayPal Express and PayPal gateways [baldwindavid, cody]
